--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -5,6 +5,9 @@ on:
     branches:
       - main # main 브랜치에 push 될 때마다 실행
 
+permissions:
+  contents: write 
+
 jobs:
   build:
     runs-on: ubuntu-latest
